--- a/frontend/public/test.html
+++ b/frontend/public/test.html
@@ -13,25 +13,17 @@
     </ul>
     
     <script>
-        async function getInstagramPictures (profileName) {
-            const baseUrl = "https://www.instagram.com";
-            const profileUrl = `${baseUrl}/${profileName}`;
-            const jsonDataUrl = `${profileUrl}/?__a=1`;
+        const token = 'IGQVJWLU5tNl9zdTc4MldmZAjB4QTFPMHA1MmNVamJscHBsTzhfU2xvNUxKTUIxSElIUng4bjhFd0R6WWxETXBuSXphTWR5cTVRY0o1TERicnMyT19LWXV5SzVWZAFpjellYRXAwU0lyS1RjMFc5N0xuYnBycXFfejNPYmxB'
+        const uri = 'https://graph.instagram.com/17841454826184672?fields=id,username&access_token=' + token;
 
-            const response = await fetch(jsonDataUrl);
-            const jsonData = await response.json();
-            const pictures = jsonData.graphql.user.edge_owner_to_timeline_media.edges;
+        async function getIds() {
+            const response = await fetch(uri)
+            const data = await response.json()
 
-            if (response.ok) {
-                return pictures;
-            } else {
-                throw new Error(pictures);
-            }
+            console.log(data)
         }
+        getIds()
 
-        getInstagramPictures("nasa")
-  .then(pictures => console.log("Pictures:", pictures))
-  .catch(error => console.error("Error:", error));
 
 </script>
 </body>
