--- a/frontend/public/test.html
+++ b/frontend/public/test.html
@@ -12,11 +12,10 @@
     <script>
         async function a(){
             const obj = {
-                fullName: "Enes Ago",
-                phoneNumber: "070 600 370",
-                date: new Date,
-                time: "17.20"
+                "username": "lindim",
+                "password": "lindim123"
             }
+            
             const settings = {
                 method: 'POST',
                 headers: {
@@ -25,10 +24,17 @@
                 },
                 body: JSON.stringify(obj)
             };
-            const response = await fetch("http://localhost:3001/newApointment",settings);
+
+            try{
+                const response = await fetch("http://localhost:3001/login",settings);
             const data = await response.json()
 
             console.log(data)
+            }
+            catch(e){
+                console.log(e)
+            }
+
         }
         a()
     </script>
